test/scenarios/error-runtime-pre-start.out
scenarios/error-runtime-pre-start.js:
main.test.example = 'will explode'
                  ^

TypeError: Cannot set property 'example' of undefined
    at Object.<anonymous> (scenarios/error-runtime-pre-start.js:)
